<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">网站记录库</string>
    <string name="about">关于</string>
    <string name="address">项目开源地址</string>
    <string name="newi">新建</string>
    <string name="modify">修改</string>
    <string name="title">标题</string>
    <string name="site">网址</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="choosetitle">请选择标题</string>
    <string name="enterTitle">请输入标题</string>
    <string name="search">搜索</string>
    <string name="copyright">CopyRight © 2018 – 2019 CZL.All Rights Reserved.</string>
</resources>