<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/free_dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="@dimen/ts2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ch"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/ts2" />

            <Spinner
                android:spinnerMode="dropdown"
                android:background="@drawable/myedit"
                android:id="@+id/spin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ch"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/mg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/site"
                android:textColor="@color/white"
                android:textSize="@dimen/ts2" />

            <EditText
                android:lines="1"
                android:id="@+id/value1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/myedit"
                android:hint="@string/choosetitle"
                android:textColor="@color/blue"
                android:inputType="text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="#E4E4E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:lines="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:lines="1"
                android:text="@string/ok"
                android:textColor="#38ADFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>