<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11ffffff">
    <LinearLayout
        android:layout_width="@dimen/dialogwidth"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/free_dialog_bg"
        android:orientation="vertical"
        tools:ignore="ObsoleteLayoutParam">
        <TextView
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:textSize="@dimen/ts2"
            android:text="@string/newi"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:background="@drawable/myedit"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/mb"
            android:hint="@string/title"
            android:textColor="@color/blue"
            android:textSize="@dimen/ts2"
            android:inputType="text" />
        <EditText
            android:background="@drawable/myedit"
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_gravity="center"
            android:hint="@string/site"
            android:textColor="@color/blue"
            android:textSize="@dimen/ts2"
            android:inputType="text" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="#E4E4E4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center"
                android:lines="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="10dp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4"/>
            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center"
                android:lines="1"
                android:text="@string/ok"
                android:textColor="#38ADFF"
                android:textSize="16sp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>